# vibetech

./: .codexignore  .editorconfig  .env.booking-platform.example  .env.development  .env.example  .env.production  .env.sandbox  .eslintignore  .geminiignore  .gitignore  .mcp.json  .mcp.json.example  .npmrc  .npmrc.npm  .typescript-quality-monitor.ps1  .vercelignore  AGENTS.md  ALL-DONE.md  API_KEY_STORAGE_ROOT_CAUSE_ANALYSIS.md  BEST_PRACTICES_2025_AUDIT.md  BUG_FIXES_COMPREHENSIVE.md  BUG_FIX_BUFFER_API.md  BUILD_PRODUCTION.ps1  CENTRALIZED_STORAGE_ARCHITECTURE.md  CLAUDE-OPTIMIZED.md  CLAUDE-TEMPLATE.md  CLAUDE.md  CLEANUP_REPORT.md  CODEBASE_CLEANUP_SUMMARY.md  CODEOWNERS  CODEX_CONFIGURATION_SUMMARY.md  CODEX_CUSTOM_INSTRUCTIONS.md  CODEX_SETUP_GUIDE.md  CODEX_TEST.md  CODEX_WEB_SETTINGS.md  COMMANDS_TO_RUN_NOW.md  COMMIT_FIX.md  COMPREHENSIVE_IMPROVEMENT_PLAN_2025-11-10.md  COMPREHENSIVE_PROJECT_REVIEW.md  COPILOT_SETUP.md  (+199 more)
.claude/: CLAUDE_DESKTOP_INSTRUCTIONS.md  COMMON_WORKFLOWS.md  MCP_SETUP_GUIDE.md  MONOREPO_ARCHITECTURE.md  PNPM_MIGRATION_SUMMARY.md  QUALITY_STANDARDS.md  README.md  SDK_INTEGRATION.md  SESSION-START-HOOK-IMPLEMENTATION.md  TRADING_BOT_GUIDE.md  TROUBLESHOOTING_GUIDE.md  agent-delegation.yaml  agents.json  data-storage-config.json  planning-thresholds.json  rules.md  settings.json  settings.local.json  test-agent-mappings.ps1  test-memory-system.ps1  test_db_connectivity.py  test_performance_metrics.py  validate-agent-system.ps1  validate-setup.ps1
.claude-plugin/: PHASE-2-COMPLETE.md  README.md  marketplace.json
.gemini/: settings.json
.github/: AUTO_MERGE_SETUP.md  CI_CD_GUIDE.md  dependabot.yml  (+1 more)
active-projects/desktop-commander-v2-final/desktop-commander/src-tauri/: Cargo.toml  tauri.conf.json
active-projects/desktop-commander-v2-final/desktop-commander/src-tauri/capabilities/: default.json
active-projects/desktop-commander-v2-final/desktop-commander/src-tauri/icons/: icon.icns
active-projects/desktop-commander-v2-final/desktop-commander/src-tauri/src/: main.rs
projects/active/desktop-apps/nova-agent-snapshots/v1.0.0_20251002_140026/src-tauri/: Cargo.toml  tauri.conf.json
projects/active/desktop-apps/nova-agent-snapshots/v1.0.0_20251002_140026/src-tauri/src/: main.rs
(+2482 files in other folders)
